hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__set@llvm14.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i8*, { i1, i16 } } @_hl.main.1(i8* %0, i64 %1, i16 %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %3 = alloca i16, align 2
  store i16 %2, i16* %3, align 2
  %4 = bitcast i16* %3 to i8*
  %5 = call i1 @__rt__list__set(i8* %0, i64 %1, i8* %4)
  %6 = bitcast i8* %4 to i16*
  %7 = load i16, i16* %6, align 2
  %8 = insertvalue { i1, i16 } { i1 false, i16 poison }, i16 %7, 1
  %9 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %2, 1
  %10 = select i1 %5, { i1, i16 } %9, { i1, i16 } %8
  %mrv = insertvalue { i8*, { i1, i16 } } undef, i8* %0, 0
  %mrv8 = insertvalue { i8*, { i1, i16 } } %mrv, { i1, i16 } %10, 1
  ret { i8*, { i1, i16 } } %mrv8
}

declare i1 @__rt__list__set(i8*, i64, i8*)
