hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__set@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { ptr, { i1, i16 } } @_hl.main.1(ptr %0, i64 %1, i16 %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %3 = alloca i16, align 2
  store i16 %2, ptr %3, align 2
  %4 = call i1 @__rt__list__set(ptr %0, i64 %1, ptr %3)
  %5 = load i16, ptr %3, align 2
  %6 = insertvalue { i1, i16 } { i1 false, i16 poison }, i16 %5, 1
  %7 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %2, 1
  %8 = select i1 %4, { i1, i16 } %7, { i1, i16 } %6
  %mrv = insertvalue { ptr, { i1, i16 } } poison, ptr %0, 0
  %mrv8 = insertvalue { ptr, { i1, i16 } } %mrv, { i1, i16 } %8, 1
  ret { ptr, { i1, i16 } } %mrv8
}

declare i1 @__rt__list__set(ptr, i64, ptr)
