hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__set@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { ptr, { i1, i16 } } @_hl.main.1(ptr %0, i64 %1, i16 %2) {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca { i1, i16 }, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca i64, align 8
  %"2_2" = alloca i16, align 2
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca { i1, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store i64 %1, ptr %"2_1", align 4
  store i16 %2, ptr %"2_2", align 2
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load i64, ptr %"2_1", align 4
  %"2_23" = load i16, ptr %"2_2", align 2
  %3 = alloca i16, align 2
  store i16 %"2_23", ptr %3, align 2
  %4 = call i1 @__rt__list__set(ptr %"2_01", i64 %"2_12", ptr %3)
  %5 = load i16, ptr %3, align 2
  %6 = insertvalue { i1, i16 } { i1 false, i16 poison }, i16 %5, 1
  %7 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %"2_23", 1
  %8 = select i1 %4, { i1, i16 } %7, { i1, i16 } %6
  store ptr %"2_01", ptr %"4_0", align 8
  store { i1, i16 } %8, ptr %"4_1", align 2
  %"4_04" = load ptr, ptr %"4_0", align 8
  %"4_15" = load { i1, i16 }, ptr %"4_1", align 2
  store ptr %"4_04", ptr %"0", align 8
  store { i1, i16 } %"4_15", ptr %"1", align 2
  %"06" = load ptr, ptr %"0", align 8
  %"17" = load { i1, i16 }, ptr %"1", align 2
  %mrv = insertvalue { ptr, { i1, i16 } } poison, ptr %"06", 0
  %mrv8 = insertvalue { ptr, { i1, i16 } } %mrv, { i1, i16 } %"17", 1
  ret { ptr, { i1, i16 } } %mrv8
}

declare i1 @__rt__list__set(ptr, i64, ptr)
